--- a/app/views/forms_breakdown_fronts/edit.html.erb
+++ b/app/views/forms_breakdown_fronts/edit.html.erb
@@ -9,5 +9,5 @@
   </div>
 <% end %>
 
-<%= link_to 'Show', @forms_breakdown_front %> |
+<%= link_to 'Show', forms_breakdown_front_path(@forms_breakdown_front.id)  %> |
 <%= link_to 'Back', forms_breakdown_fronts_path %>
