--- a/app/views/forms_breakdown_fronts/_form.html.erb
+++ b/app/views/forms_breakdown_fronts/_form.html.erb
@@ -1,6 +1,6 @@
   <div class="field">
     <%= f.label :date %><br />
-    <%= f.text_field :date %>
+    <%= f.text_field :date, :class => "datepicker" %>
   </div>
   <div class="field">
     <%= f.label :name %><br />
