--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "tools/datepicker" %>
+
 <%= form_for(@holiday) do |f| %>
   <% if @holiday.errors.any? %>
     <div id="error_explanation">
