--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :ymd %><br />
-    <%= f.text_field :ymd, :class => "datepicker" %>
+    <%= f.text_field :ymd, :class => "datepicker today" %>
   </div>
   <div class="field">
     <%= f.label :name %><br />
